      x86_64-pc-linux-gnu to get i386 binaries on amd64. (closes: #366741)
      Hence all traces to our own mechanism to override the platform name on
      amd64 have been removed:
      - debian/patches/001_amd64_disable_platform_reset.patch
      - debian/extra/use-32bit-on-amd64.sh
      - the associated paragraph from debian/boinc-client.README.Debian
  * Updated boinc_client's and boincmgr's manual pages for the new release.
  * debian/boinc-client.{init,default}: Use two dashes for boinc_client's
    command line options instead of one because that is it's default now.

  +++ Changes unsuitable for the trunk branch:

  * Updates for the new Python policy:
    - Added python-support (>= 0.4.2) to Build-Depends.
    - Replaced dh_python with dh_pysupport in debian/rules.
  * debian/control: Added "tcsh | c-shell" to boinc-server's Depends field
    since tools/db_query and tools/watch_tcp use /bin/csh as interpreter.
  * debian/boinc-server.README.Debian: Added README.Debian which is at the
    moment only a pointer to http://wiki.debian.org/BOINC/Server.
  * boinc-server.install: Added new files: db/init_db, sched/db_dump_spec.xml,
    test/uc_result, test/uc_wu_nodelete, tools/cleanlogs.sh,
    tools/create_work_example, tools/makelog.sh, tools/project.xml,
    tools/run_in_ops and tools/updater. Some of them were required by the
    tools/make_project script.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 25 Apr 2007 09:22:22 +0200

boinc (5.8.17-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - BOINC Manager:
      - Broadened "Options" dialog so that labels does not get truncated.
        (closes: #389840)
      - Display project names in "Reset Project" dialog correctly. (LP: #83708)
      - Fixed run mode entries in "Activity" menu. (LP: #93850)
  * debian/control:
    - Bumped versioned Build-Depends on libcurl3-openssl-dev to >= 7.15.5
      which is required for the bandwith-throttling feature. Also removed the