@@ -11,7 +11,8 @@ boinc (5.9.4-1) experimental; urgency=low
       - debian/patches/001_amd64_disable_platform_reset.patch
       - debian/extra/use-32bit-on-amd64.sh
       - the associated paragraph from debian/boinc-client.README.Debian
-  * Updated boinc_client's and boincmgr's manual pages for the new release.
+  * Updated boinc_client's, boinc_cmd's and boincmgr's manual pages for the
+    new release.
   * debian/boinc-client.{init,default}: Use two dashes for boinc_client's
     command line options instead of one because that is it's default now.
 
@@ -29,8 +30,9 @@ boinc (5.9.4-1) experimental; urgency=low
     tools/create_work_example, tools/makelog.sh, tools/project.xml,
     tools/run_in_ops and tools/updater. Some of them were required by the
     tools/make_project script.
+  * 
 
- -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 25 Apr 2007 09:22:22 +0200
+ -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 25 Apr 2007 10:19:56 +0200
 
 boinc (5.8.17-1) unstable; urgency=low
 
